attempting to fix the text align

--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,11 @@ a:link,a:visited{
   padding: auto;
 }
 
-.links1 ul{
-  text-align: center;
-}
-
 .links1 li{
   border: 0;
   background: none;
   display: inline-block;
   margin: 20px auto;
-  text-align: center;
   padding: 14px 20px;
   border: 2px solid #00BCD4;
   padding: 14px 10px;
@@ -56,7 +51,6 @@ border-color: rgb(64, 221, 85);
   background: none;
   display: inline-block;
   margin: 20px auto;
-  text-align: center;
   padding: 14px 20px;
   border: 2px solid #00BCD4;
   padding: 14px 10px;
